--- a/front-end/style.css
+++ b/front-end/style.css
@@ -1,3 +1,11 @@
 .colorino{
     background-color: rgb(244, 236, 240);
 }
+
+#select-colors{
+    width: 30%;
+}
+
+#select-colors-teddy{
+    width: 50%;
+}
