--- a/front-end/style.css
+++ b/front-end/style.css
@@ -9,3 +9,24 @@
 #select-colors-teddy{
     width: 50%;
 }
+
+
+.cardmar {
+    margin: 5px;
+}
+
+@media ( max-width: 340px) {
+
+    .font-size{
+        font-size: 0.8rem;
+    }
+    
+}
+
+@media ( min-width: 380px) and ( max-width: 600px ) {
+
+    .font-size{
+        font-size: 1.1rem;
+        
+    }
+}
