--- a/front-end/style.css
+++ b/front-end/style.css
@@ -18,7 +18,7 @@
 @media ( max-width: 340px) {
 
     .font-size{
-        font-size: 0.8rem;
+        font-size: 0.75rem;
     }
     
 }
@@ -28,5 +28,11 @@
     .font-size{
         font-size: 1.1rem;
         
+    }
+}
+
+@media ( min-width : 768px) and (max-width: 991px){
+    .table {
+        font-size: 0.9rem;
     }
 }
